# copilot-document-knowledge-engineering

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  compose.yaml  pyproject.toml
.github/workflows/: ci.yml
configs/: pipeline.yaml
copilot/agent/: global_instructions.md  safety_policy.md
copilot/evaluation/: golden_dataset.json
copilot/prompts/: answer_with_sources.md
skills/document-curator/: SKILL.md  input.schema.json  output.schema.json
src/knowledge_engineering/: __init__.py  api.py  config.py  database.py  models.py  pipeline.py
src/knowledge_engineering/static/: app.js  index.html  styles.css
tests/: test_api.py  test_pipeline.py
